[gd_scene load_steps=3 format=3 uid="uid://bsob8jd6et0g2"]

[ext_resource type="Script" uid="uid://bq4at7o410ff6" path="res://scripts/desktop_gritty.gd" id="1"]
[ext_resource type="Script" uid="uid://blbh5sih0bdn0" path="res://scripts/button.gd" id="3"]

[node name="desktop_gritty" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.062, 0.16, 0.533, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 10.0
offset_right = 1212.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="TopBar"]
layout_mode = 2
text = "FEDERAL PROCUREMENT TERMINAL v2.7"

[node name="Status" type="Label" parent="TopBar"]
layout_mode = 2
text = "READY"

[node name="Clock" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 10
text = "00:00:00"
horizontal_alignment = 2

[node name="Dock" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 24.0
offset_top = 70.0
theme_override_constants/separation = 18

[node name="button_market" type="Button" parent="Dock"]
layout_mode = 2
text = "Market"
script = ExtResource("3")

[node name="market" type="Window" parent="Dock/button_market"]
title = "Market"
position = Vector2i(40, 120)
size = Vector2i(680, 420)
visible = false

[node name="MarketRoot" type="VBoxContainer" parent="Dock/button_market/market"]
theme_override_constants/separation = 8

[node name="Offers" type="ItemList" parent="Dock/button_market/market/MarketRoot"]
layout_mode = 2
auto_height = true

[node name="MarketButtons" type="HBoxContainer" parent="Dock/button_market/market/MarketRoot"]
layout_mode = 2

[node name="BuyBtn" type="Button" parent="Dock/button_market/market/MarketRoot/MarketButtons"]
layout_mode = 2
text = "Buy Selected"

[node name="CloseBtn" type="Button" parent="Dock/button_market/market/MarketRoot/MarketButtons"]
layout_mode = 2
text = "Close"

[node name="button_bank" type="Button" parent="Dock"]
layout_mode = 2
text = "Bank"
script = ExtResource("3")

[node name="bank" type="Window" parent="Dock/button_bank"]
title = "Bank"
position = Vector2i(140, 140)
size = Vector2i(520, 320)
visible = false

[node name="BankRoot" type="VBoxContainer" parent="Dock/button_bank/bank"]
theme_override_constants/separation = 8

[node name="BankLogin" type="VBoxContainer" parent="Dock/button_bank/bank/BankRoot"]
layout_mode = 2

[node name="BankPrompt" type="Label" parent="Dock/button_bank/bank/BankRoot/BankLogin"]
layout_mode = 2
text = "Bank Login
Password:"

[node name="BankMask" type="Label" parent="Dock/button_bank/bank/BankRoot/BankLogin"]
layout_mode = 2

[node name="BankContent" type="VBoxContainer" parent="Dock/button_bank/bank/BankRoot"]
visible = false
layout_mode = 2

[node name="Balance" type="Label" parent="Dock/button_bank/bank/BankRoot/BankContent"]
layout_mode = 2
text = "Balance: $0"

[node name="BankButtons" type="HBoxContainer" parent="Dock/button_bank/bank/BankRoot/BankContent"]
layout_mode = 2

[node name="BankCloseBtn" type="Button" parent="Dock/button_bank/bank/BankRoot/BankContent/BankButtons"]
layout_mode = 2
text = "Close"

[node name="button_govt" type="Button" parent="Dock"]
layout_mode = 2
text = "Gov Contracts"
script = ExtResource("3")

[node name="govt" type="Window" parent="Dock/button_govt"]
title = "Gov Contracts"
position = Vector2i(120, 160)
size = Vector2i(560, 340)
visible = false

[node name="button_logistics" type="Button" parent="Dock"]
layout_mode = 2
text = "Logistics"
script = ExtResource("3")

[node name="logistics" type="Window" parent="Dock/button_logistics"]
title = "Logistics"
position = Vector2i(160, 180)
size = Vector2i(520, 320)
visible = false

[node name="button_news" type="Button" parent="Dock"]
layout_mode = 2
text = "News"
script = ExtResource("3")

[node name="news" type="Window" parent="Dock/button_news"]
title = "News"
position = Vector2i(200, 130)
size = Vector2i(520, 320)
visible = false

[node name="button_products" type="Button" parent="Dock"]
layout_mode = 2
text = "Products"
script = ExtResource("3")

[node name="products" type="Window" parent="Dock/button_products"]
title = "Products"
position = Vector2i(260, 120)
size = Vector2i(640, 400)
visible = false

[node name="button_messager" type="Button" parent="Dock"]
layout_mode = 2
text = "Messenger"
script = ExtResource("3")

[node name="messenger" type="Window" parent="Dock/button_messager"]
title = "Messenger"
position = Vector2i(340, 180)
size = Vector2i(420, 260)
visible = false

[node name="button_black" type="Button" parent="Dock"]
layout_mode = 2
text = "Black Market"
script = ExtResource("3")

[node name="blackmarket" type="Window" parent="Dock/button_black"]
title = "Black Market"
position = Vector2i(420, 160)
size = Vector2i(600, 380)
visible = false

[node name="Taskbar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 8

[node name="StartButton" type="Button" parent="Taskbar"]
layout_mode = 2
text = "Start"

[node name="WindowList" type="HBoxContainer" parent="Taskbar"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TaskClock" type="Label" parent="Taskbar"]
layout_mode = 2
text = "00:00"

[node name="MenuOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.001)

[node name="StartMenu" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = -340.0
offset_right = 280.0
offset_bottom = 320.0

[node name="MenuVBox" type="VBoxContainer" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Search" type="LineEdit" parent="StartMenu/MenuVBox"]
layout_mode = 2
placeholder_text = "Search apps..."

[node name="Results" type="ItemList" parent="StartMenu/MenuVBox"]
layout_mode = 2
auto_height = true

[node name="BootOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.03, 0.95)

[node name="BootText" type="Label" parent="BootOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -20.0
offset_right = 220.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "INITIALIZING..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.75)

[node name="CenterBox" type="VBoxContainer" parent="LoginOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -80.0
offset_right = 260.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="LoginTitle" type="Label" parent="LoginOverlay/CenterBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LOGIN REQUIRED"
horizontal_alignment = 1

[node name="Prompt" type="Label" parent="LoginOverlay/CenterBox"]
layout_mode = 2
text = "User: CONTRACTOR
Password:"

[node name="Mask" type="Label" parent="LoginOverlay/CenterBox"]
layout_mode = 2

[connection signal="pressed" from="Dock/button_market" to="Dock/button_market" method="_on_pressed"]
[connection signal="pressed" from="Dock/button_bank" to="Dock/button_bank" method="_on_pressed"]
[connection signal="pressed" from="Dock/button_govt" to="Dock/button_govt" method="_on_pressed"]
[connection signal="pressed" from="Dock/button_logistics" to="Dock/button_logistics" method="_on_pressed"]
[connection signal="pressed" from="Dock/button_news" to="Dock/button_news" method="_on_pressed"]
[connection signal="pressed" from="Dock/button_products" to="Dock/button_products" method="_on_pressed"]
[connection signal="pressed" from="Dock/button_messager" to="Dock/button_messager" method="_on_pressed"]
[connection signal="pressed" from="Dock/button_black" to="Dock/button_black" method="_on_pressed"]
